<resources>
    <string name="app_name">Less Stress</string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="monday">Monday</string>
    <string name="new_event">New Event</string>
    <string name="daily">Daily</string>
    <string name="month">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="login">Login</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="back_to_login">Back to login</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="click_to_reset_password">Click to reset password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_app">Welcome to app</string>
    <string name="click_to_return">Click to return</string>
    <string name="delet_account">Delete Account</string>
    <string name="change_password">Change password</string>
    <string name="save_changes">Save changes</string>
    <string name="edit_profile">Edit profile</string>
    <string name="event_type">Event type</string>
    <string name="DateEvent">21.11.2023</string>
    <string name="Starting_at">Starting at </string>
    <string name="Ending_at">Ending at </string>
    <string name="Event_name">Event name</string>
    <string name="Event_description">Event Description</string>
    <string name="Add_btn">Add</string>
    <string name="View_Events">View events</string>
    <string name="Add_Events">Add events</string>
    <string name="cancel_btn">Cancel</string>
    <string-array name="event_weights_spinner">
        <item>Event weight</item>
        <item>Vital</item>
        <item>Significant</item>
        <item>Relevant</item>
        <item>Minor</item>
        <item>Simple</item>
    </string-array>
    <string-array name="event_types_spinner">
        <item>Event Type</item>
        <item>Athletic</item>
        <item>Academic</item>
        <item>Social</item>
        <item>Professional</item>
        <item>Culinary</item>
    </string-array>
    <string-array name="recurring_event_spinner">
        <item>Recurring Event</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="title_activity_crad_view_event_model">CradViewEventModelActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tip_title_hint">Tip Title</string>
    <string name="tip_description_hint">Tip Description</string>
    <string name="tip_Add_btn">Add</string>
    <string name="tip_cancel_btn">Cancel</string>
    <string-array name="tip_type_spinner">
        <item>Tip Type</item>
        <item>Exercise</item>
        <item>Relaxation</item>
        <item>Nutrition</item>
    </string-array>
    <string name="title_activity_all_archived_tips_view">AllArchivedTipsView</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>