<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.EditProfile">

    <TextView
        android:id="@+id/textView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/edit_profile" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/benutzer" />

    <TextView
        android:id="@+id/textEmail"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>





    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_editProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes" />

    <Button
        android:id="@+id/btn_passwordChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password" />

    <Button
        android:id="@+id/btn_deletAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E31414"
        android:text="@string/delet_account" />

    <TextView
        android:id="@+id/backHome"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>