<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="EventListViewModel"
            type="com.example.calenderapp.calenderView.ui.viewmodel.EventListViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/MainCalenderLayout"
        android:layout_height="match_parent">

        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_view" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btn_radio_Month"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:text="Month"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="22sp"
                android:button="@color/secondary_second"
                android:checked="true"
                android:textColor="@color/white"
                android:background="@drawable/btn_radio_left_selected"
                />
            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btn_radio_Week"
                android:layout_width="0dp"
                android:textSize="22sp"
                android:layout_height="50dp"
                android:textColor="@color/gray"
                android:text="Week"
                android:layout_weight="1"
                android:gravity="center"
                android:button="@color/secondary_second"
                android:checked="false"
                android:background="@drawable/btn_radio_right_selected"
                />

        </RadioGroup>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_view"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="-120dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="40dp"
            android:columnCount="1"
            android:rowCount="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_rowWeight="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="12dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp">
                    <ImageButton
                        android:id="@+id/previousMonthButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/btn_round"
                        android:src="@drawable/ic_backward"
                        android:layout_marginLeft="30dp"
                        android:onClick="previousMonthAction"
                        android:padding="20dp" />

                    <TextView
                        android:id="@+id/monthYearTV"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:text="@string/feb_2021"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"/>

                    <ImageButton
                        android:id="@+id/NextMonthButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/btn_round"
                        android:src="@drawable/ic_forward"
                        android:layout_marginRight="30dp"
                        android:onClick="nextMonthAction"
                        android:padding="20dp" />

                </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sun"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/mon"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tue"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/wed"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/thur"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fri"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sat"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textSize="16sp"/>


                    </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/calendarRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>



                </LinearLayout>


            </androidx.cardview.widget.CardView>



        </GridLayout>

    </RelativeLayout></layout>